# explore-cpp

./: .clang-format  .gitignore  README.md  meson.build
arrow/: .gitignore  00_basic_data_strcuture.cpp  01_file_io.cpp  02_arrow_compute.cpp  03_arrow_dataset.cpp  justfile  meson-native.txt  meson.build  read_parquet.py
arrow/async_task/: 00_future.cpp  01_threadpool.cpp  02_scheduler.cpp  04_taskgroup.cpp  05_taskscheduler.cpp  06_asyncscheduler.cpp  meson.build
arrow/cookbook/: .gitignore  CMakeLists.txt  build.sh  common.cc  common.h  datasets.cc  flight.cc  main.cc
arrow/cookbook/protos/: helloworld.proto
arrow/examples/: acero_register_example.cpp  compute_and_write_csv_example.cpp  dataset_example.cpp  example.cpp  meson.build
arrow/user_guide/: 00_high_level_overview.md  01_memory.md  02_array.md  03_data_type.md  04_taular_data.md  05_compute_functions.md  06_acero.md  07_tabular_dataset.md  08_thread_management.md  build.sh  streaming_engine.cpp
asio/: justfile  meson.build
asio/benchmark/: benchmark.md  benchmark_mt.cpp  benchmark_st.cpp  io_context_pool.hpp  meson.build  resource_limit.hpp  runtime.hpp  task.hpp
asio/tests/: meson.build  test_async_tcp_udp_server.cpp  test_async_timer.cpp  test_async_udp_server.cpp  test_binding_arguments.cpp  test_cpp20_coroutine.cpp  test_member_function.cpp  test_multithread.cpp  test_timer.cpp  test_udp_client.cpp  test_udp_server.cpp
brpc/: CMakeLists.txt  client.cpp  coroutine_server.cpp  echo.proto  server.cpp
brpc/echo/: CMakeLists.txt  build.sh
brpc/http/: CMakeLists.txt  http.proto  http_client.cpp  http_server.cpp
learn_asio/: debug.hpp
oatpp/: 00_start.cpp  01_request_handler.cpp  02_json_response.cpp  meson-native.txt  meson.build
oatpp/03_well_structed_project/: meson.build
oatpp/03_well_structed_project/src/: App.cpp  AppComponent.hpp
oatpp/03_well_structed_project/src/DTO/: message.hpp
oatpp/03_well_structed_project/src/controller/: MyController.hpp
rang/: main.cpp  rang.hpp
stdexec/: 00_hello.cpp  01_let_value.cpp  main.cpp  meson.build
tests/: meson.build  test_async_tcp_server.cpp  test_binding_arguments.cpp  test_multithread.cpp  test_tcp_client.cpp  test_tcp_server.cpp  test_udp_client.cpp
thrift/: .gitignore  CMakeLists.txt  build.sh  client.cpp  client.py  example.thrift  server.cpp
